[gd_scene load_steps=5 format=3 uid="uid://fcdu5445frxa"]

[ext_resource type="Script" path="res://sound_radar.gd" id="1_wm6jn"]

[sub_resource type="LabelSettings" id="LabelSettings_l14qd"]
line_spacing = 4.0
font_size = 35
font_color = Color(0, 0.627451, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ypjtp"]
font_size = 30
font_color = Color(0, 0.627451, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xcgi6"]
font_size = 20
font_color = Color(0, 0.784314, 0, 1)

[node name="SoundRadar" type="Node2D"]
script = ExtResource("1_wm6jn")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 1200.0
offset_bottom = 800.0

[node name="DOA1" type="ColorRect" parent="."]
offset_left = 100.0
offset_right = 200.0
offset_bottom = 25.0
color = Color(0, 0.627451, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="DOA2" type="ColorRect" parent="."]
offset_left = 200.0
offset_right = 300.0
offset_bottom = 25.0
color = Color(0, 0.627451, 0, 1)

[node name="DOA3" type="ColorRect" parent="."]
offset_left = 300.0
offset_right = 400.0
offset_bottom = 25.0
color = Color(0, 0.627451, 0, 1)

[node name="DOA4" type="ColorRect" parent="."]
offset_left = 400.0
offset_right = 500.0
offset_bottom = 25.0
color = Color(0, 0.627451, 0, 1)

[node name="DOA5" type="ColorRect" parent="."]
offset_left = 500.0
offset_right = 600.0
offset_bottom = 25.0
color = Color(0, 0.627451, 0, 1)

[node name="DOA6" type="ColorRect" parent="."]
offset_left = 600.0
offset_right = 700.0
offset_bottom = 25.0
color = Color(0, 0.627451, 0, 1)

[node name="DOA7" type="ColorRect" parent="."]
offset_left = 700.0
offset_right = 800.0
offset_bottom = 25.0
color = Color(0, 0.627451, 0, 1)

[node name="DOA8" type="ColorRect" parent="."]
offset_left = 800.0
offset_right = 900.0
offset_bottom = 25.0
color = Color(0, 0.627451, 0, 1)

[node name="DOA9" type="ColorRect" parent="."]
offset_left = 900.0
offset_right = 1000.0
offset_bottom = 25.0
color = Color(0, 0.627451, 0, 1)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Loudness0" type="ColorRect" parent="."]
offset_left = 350.0
offset_top = 35.0
offset_right = 370.0
offset_bottom = 55.0
rotation = 0.785398
color = Color(0, 0.627451, 0, 0.294118)

[node name="Loudness1" type="ColorRect" parent="."]
offset_left = 450.0
offset_top = 35.0
offset_right = 470.0
offset_bottom = 55.0
rotation = 0.785398
color = Color(0, 0.627451, 0, 0.294118)

[node name="Loudness2" type="ColorRect" parent="."]
offset_left = 550.0
offset_top = 35.0
offset_right = 570.0
offset_bottom = 55.0
rotation = 0.785398
color = Color(0, 0.627451, 0, 0.294118)

[node name="Loudness3" type="ColorRect" parent="."]
offset_left = 650.0
offset_top = 35.0
offset_right = 670.0
offset_bottom = 55.0
rotation = 0.785398
color = Color(0, 0.627451, 0, 0.294118)

[node name="Loudness4" type="ColorRect" parent="."]
offset_left = 750.0
offset_top = 35.0
offset_right = 770.0
offset_bottom = 55.0
rotation = 0.785398
color = Color(0, 0.627451, 0, 0.294118)

[node name="Classification" type="Label" parent="."]
offset_left = 15.0
offset_top = 20.0
offset_right = 265.0
offset_bottom = 73.0
label_settings = SubResource("LabelSettings_l14qd")

[node name="Scanner" type="ColorRect" parent="."]
offset_left = -50.0
offset_right = -45.0
offset_bottom = 25.0
color = Color(0, 0.627451, 0, 1)

[node name="DL_model" type="CheckButton" parent="."]
modulate = Color(0, 1, 0, 1)
offset_left = 900.0
offset_top = 32.0
offset_right = 1040.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(0, 0.627451, 0, 1)
theme_override_font_sizes/font_size = 20
text = "DL model"

[node name="Help" type="Label" parent="."]
offset_left = 1050.0
offset_top = 28.0
offset_right = 1078.0
offset_bottom = 73.0
mouse_filter = 0
text = "?"
label_settings = SubResource("LabelSettings_ypjtp")
horizontal_alignment = 1

[node name="Help_content" type="Label" parent="."]
offset_left = 350.0
offset_top = 36.0
offset_right = 809.0
offset_bottom = 236.0
label_settings = SubResource("LabelSettings_xcgi6")

[node name="Timer2" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="toggled" from="DL_model" to="." method="_on_dl_model_toggled"]
[connection signal="mouse_entered" from="Help" to="." method="_on_help_mouse_entered"]
[connection signal="mouse_exited" from="Help" to="." method="_on_help_mouse_exited"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
